--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/hws-wao/core",
   "dependencies": {
     "config": "^1.10.0",
-    "date-utils": "^1.2.16"
+    "date-utils": "^1.2.16",
+    "log4js": "^0.6.22"
   }
 }
