--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "config": "^1.10.0",
     "date-utils": "^1.2.16",
-    "log4js": "^0.6.22"
+    "jquery-deferred": "^0.3.0",
+    "log4js": "^0.6.22",
+    "mkdirp": "^0.5.0",
+    "rimraf": "^2.2.8"
   }
 }
