--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "jquery-deferred": "^0.3.0",
     "log4js": "^0.6.22",
     "mkdirp": "^0.5.0",
+    "multiparty": "^4.1.1",
+    "mv": "^2.0.3",
     "rimraf": "^2.2.8"
   }
 }
