--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mkdirp": "^0.5.0",
     "multiparty": "^4.1.1",
     "mv": "^2.0.3",
+    "node-zip": "^1.1.0",
     "rimraf": "^2.2.8"
   }
 }
