--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "multiparty": "^4.1.1",
     "mv": "^2.0.3",
     "node-zip": "^1.1.0",
-    "rimraf": "^2.2.8"
+    "rimraf": "^2.2.8",
+    "unzip": "^0.1.11",
+    "unzip2": "^0.2.5"
   }
 }
