mongodbとqueryStringパッケージを再追加

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "mv": "^2.0.3",
     "node-zip": "^1.1.0",
     "rimraf": "^2.2.8",
-    "unzip2": "^0.2.5"
+    "unzip2": "^0.2.5",
+    "mongodb": "^1.4.8",
+    "querystring": "*"
   }
 }
