--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "homepage": "https://github.com/hws-wao/core",
   "dependencies": {
     "config": "^1.10.0",
-    "date-utils": "^1.2.16",
     "jquery-deferred": "^0.3.0",
     "log4js": "^0.6.22",
     "mkdirp": "^0.5.0",
@@ -26,6 +25,8 @@
     "mv": "^2.0.3",
     "node-zip": "^1.1.0",
     "rimraf": "^2.2.8",
-    "unzip2": "^0.2.5"
+    "unzip2": "^0.2.5",
+    "mongodb": "^1.4.8",
+    "querystring": "*"
   }
 }
