--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
   "dependencies": {
     "config": "^1.10.0",
     "jquery-deferred": "^0.3.0",
+    "jsdom": "^3.1.0",
     "log4js": "^0.6.22",
     "mkdirp": "^0.5.0",
+    "mongodb": "^1.4.8",
     "multiparty": "^4.1.1",
     "mv": "^2.0.3",
     "node-zip": "^1.1.0",
+    "querystring": "*",
     "rimraf": "^2.2.8",
-    "unzip2": "^0.2.5",
-    "mongodb": "^1.4.8",
-    "querystring": "*"
+    "unzip2": "^0.2.5"
   }
 }
