--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-zip": "^1.1.0",
     "querystring": "*",
     "rimraf": "^2.2.8",
+    "underscore": "^1.7.0",
     "unzip2": "^0.2.5"
   }
 }
