--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/jasmine-node/bin/jasmine-node spec"
   },
   "repository": {
     "type": "git",
@@ -29,5 +29,10 @@
     "rimraf": "^2.2.8",
     "underscore": "^1.7.0",
     "unzip2": "^0.2.5"
+  },
+  "devDependencies": {
+    "jasmine": "^2.2.1",
+    "jasmine-core": "^2.2.0",
+    "jasmine-node": "^1.14.5"
   }
 }
