--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "node_modules/jasmine-node/bin/jasmine-node spec"
+    "test": "node_modules/jasmine-node/bin/jasmine-node"
   },
   "repository": {
     "type": "git",
