hound ci の設定を追加

--- a/.jshintrc
+++ b/.jshintrc
@@ -26,6 +26,13 @@
     "WebSocket": true,
     "FormData": true,
     "google": true,
-    "require": true
+    "require": true,
+    "describe" : false,
+    "it" : false,
+    "before" : false,
+    "beforeEach" : false,
+    "after" : false,
+    "afterEach" : false,
+    "expect" : false
   }
 }
