--- a/.jshintrc
+++ b/.jshintrc
@@ -33,6 +33,7 @@
     "beforeEach" : false,
     "after" : false,
     "afterEach" : false,
-    "expect" : false
+    "expect" : false,
+    "_" : false
   }
 }
