--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "config": "^1.10.0",
     "jsdom": "^3.1.0",
     "log4js": "^0.6.22",
+    "mime": "^1.3.4",
     "mkdirp": "^0.5.0",
     "mongodb": "^1.4.8",
     "multiparty": "^4.1.1",
@@ -27,6 +28,7 @@
     "node-zip": "^1.1.0",
     "querystring": "*",
     "rimraf": "^2.2.8",
+    "type-is": "^1.6.0",
     "underscore": "^1.7.0",
     "unzip2": "^0.2.5"
   },
