--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "multiparty": "^4.1.1",
     "mv": "^2.0.3",
     "node-zip": "^1.1.0",
-    "querystring": "*",
+    "wao-querystring": "git://github.com/hws-wao/wao-querystring.git",
     "rimraf": "^2.2.8",
     "type-is": "^1.6.0",
     "underscore": "^1.7.0",
