jshintで無視するグローバル変数として_, jqueryify, JQUERY_URLを追加

--- a/.jshintrc
+++ b/.jshintrc
@@ -35,6 +35,8 @@
     "after" : false,
     "afterEach" : false,
     "expect" : false,
-    "_" : false
+    "_" : false,
+    "jqueryify" : false,
+    "JQUERY_URL" : false
   }
 }
