--- a/.jshintrc
+++ b/.jshintrc
@@ -34,6 +34,8 @@
     "after" : false,
     "afterEach" : false,
     "expect" : false,
-    "_" : false
+    "_" : false,
+    "jqueryify" : false,
+    "JQUERY_URL" : false
   }
 }
