--- a/.jshintrc
+++ b/.jshintrc
@@ -14,6 +14,7 @@
   "unused": true,
   "trailing": true,
   "smarttabs": true,
+  "expr" : true,
   "globals": {
     "jQuery": true,
     "$": true,
