--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "jasmine": "^2.2.1",
     "jasmine-core": "^2.2.0",
-    "jasmine-node": "^1.14.5"
+    "jasmine-node": "^1.14.5",
+    "node-inspector": "^0.9.2"
   }
 }
