--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/hws-wao/core",
   "dependencies": {
     "config": "^1.10.0",
+    "cookie": "^0.1.2",
     "jsdom": "^3.1.0",
     "log4js": "^0.6.22",
     "mime": "^1.3.4",
@@ -26,6 +27,7 @@
     "multiparty": "^4.1.1",
     "mv": "^2.0.3",
     "node-zip": "^1.1.0",
+    "nodemailer": "^1.3.4",
     "puid": "^1.0.2",
     "rimraf": "^2.2.8",
     "type-is": "^1.6.0",
