作業途中だけどコミット。

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "type-is": "^1.6.0",
     "underscore": "^1.7.0",
     "unzip2": "^0.2.5",
+    "url": "^0.10.3",
     "wao-querystring": "git://github.com/hws-wao/wao-querystring.git"
   },
   "devDependencies": {
