--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "config": "^1.10.0",
     "cookie": "^0.1.2",
+    "fs-extra": "^0.20.0",
     "jsdom": "^3.1.0",
     "log4js": "^0.6.22",
     "mime": "^1.3.4",
@@ -38,7 +39,8 @@
     "underscore": "^1.7.0",
     "unzip2": "^0.2.5",
     "url": "^0.10.3",
-    "wao-querystring": "git://github.com/hws-wao/wao-querystring.git"
+    "wao-querystring": "git://github.com/hws-wao/wao-querystring.git",
+    "yargs": "^3.12.0"
   },
   "devDependencies": {
     "jasmine": "^2.2.1",
